# mspm0_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  device.lds.genlibs  empty.cpp  empty.syscfg  mspm0_import.cmake  ti_msp_dl_config.c  ti_msp_dl_config.h
.cache/clangd/index/: empty.cpp.D9E7DE0F36441AAE.idx
